--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -5,6 +5,9 @@
     <title>Create Note</title>
 </head>
 <body>
+<th:block th:if="${message}">
+    <p th:text="${message}"></p>
+</th:block>
 <form th:action="@{/create-note}" th:object="${note}" method="post">
     <fieldset>
         <legend><h1>Thêm mới ghi chú</h1></legend>
@@ -18,9 +21,11 @@
                 <td><textarea rows="10" cols="30" th:field="*{content}"/></td>
             </tr>
             <tr>
-                <td><input type="submit" value="Hủy"></td>
+                <td><input type="reset" value="Hủy" ></td>
                 <td><input type="submit" value="Lưu"></td>
+
             </tr>
+
         </table>
     </fieldset>
 
